--- a/templates/authentication/register.html
+++ b/templates/authentication/register.html
@@ -41,40 +41,40 @@
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-hat-3"></i></span>
                       </div>
-                      {{ form.username }}
+                      {{ tiquet_form.username }}
                     </div>
                   </div>
-                  <span class="text-error">{{ form.username.errors }}</span>
+                  <span class="text-error">{{ tiquet_form.username.errors }}</span>
 
                   <div class="form-group">
                     <div class="input-group input-group-alternative mb-3">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-email-83"></i></span>
                       </div>
-                      {{ form.email }}
+                      {{ tiquet_form.email }}
                     </div>
                   </div>
-                  <span class="text-error">{{ form.email.errors }}</span>
+                  <span class="text-error">{{ tiquet_form.email.errors }}</span>
 
                   <div class="form-group">
                     <div class="input-group input-group-alternative">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                       </div>
-                      {{ form.password1 }}
+                      {{ tiquet_form.password1 }}
                     </div>
                   </div>
-                  <span class="text-error">{{ form.password1.errors }}</span>
+                  <span class="text-error">{{ tiquet_form.password1.errors }}</span>
 
                   <div class="form-group">
                     <div class="input-group input-group-alternative">
                       <div class="input-group-prepend">
                         <span class="input-group-text"><i class="ni ni-lock-circle-open"></i></span>
                       </div>
-                      {{ form.password2 }}
+                      {{ tiquet_form.password2 }}
                     </div>
                   </div>
-                  <span class="text-error">{{ form.password2.errors }}</span>
+                  <span class="text-error">{{ tiquet_form.password2.errors }}</span>
 
                   <div class="row my-4">
                     <div class="col-12">
