--- a/templates/public/includes/navigation-fullscreen.html
+++ b/templates/public/includes/navigation-fullscreen.html
@@ -19,9 +19,9 @@
           </a>
         </li>
         <li class="nav-item d-none d-lg-block ml-lg-4">
-          <a href="#"
+          <a href="{% url 'tiquets' %}"
               class="btn btn-neutral">
-            <span class="nav-link-inner--text">Test</span>
+            <span class="nav-link-inner--text">Tiquets</span>
           </a>
         </li>
       </ul>
